# rust-cqrs-bank

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Database.Dockerfile  Dockerfile  README.md  justfile  rustfmt.toml
migrations/: 20221202011421_create_events_table.sql  20221202022210_account_query_table.sql
resources/: application.yaml  eurofxref.csv  local.yaml  production.yaml  secrets.yaml
scripts/: create_db.sh  init_db.sh
src/: application.rs  errors.rs  http_server.rs  lib.rs  main.rs  services.rs  settings.rs  tracing.rs
src/application/: app_state.rs  bank_routes.rs  errors.rs  health_routes.rs  result.rs
src/http_server/: app_state.rs  bank_routes.rs  errors.rs  health_routes.rs
src/model/: bank_account.rs  mod.rs
src/model/bank_account/: errors.rs  protocol.rs
src/queries/: mod.rs
src/settings/: cli_options.rs  http_api_settings.rs  tests.rs
tests/api/: bank.rs  health_check.rs  helpers.rs  main.rs
tests/data/: application.yaml  local.yaml  settings.yaml
