[package]
name = "bankaccount"
version = "0.1.0"
edition = "2021"
repository = "https://main.gitlab.in.here.com/olp/narya/rust-cqrs-eventsourcing"

[[bin]]
name = "bankaccount"
path = "src/main.rs"

[dependencies]
pretty-snowflake = { git = "https://github.com/dmrolfs/pretty-snowflake-rs" }
settings_loader = { git = "https://github.com/dmrolfs/settings-loader-rs", features = ["database", "http"] }

cqrs-es = "0.4.5"
postgres-es = "0.4.5"

anyhow = "1.0.66"
async-trait = "0.1"
axum = "0.5.17"
chrono = "0.4.23"
clap = { version = "4.0.26", default_features = true, features = ["derive"] }
config = "0.13.2"
enum_delegate = "0.2.0"
futures = "0.3.25"
futures-util = "0.3.25"
hyper = "0.14.23"
itertools = "0.10.5"
money2 = { version = "0.8.3", features = ["serde", "num-traits",] }
once_cell = "1.16.0"
prometheus = { version = "0.13.3", features = ["process"] }
prometheus-static-metric = "0.5.1"
secrecy = "0.8.0"
serde = "1.0.147"
serde_json = "1.0.87"
serde_yaml = "0.9.14"
serde_with = { version = "2.0.1", features = ["chrono", "json", "macros"]}
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full", "io-util", "tracing"] }
tower = { version = "0.4.13", features = ["timeout", "limit",] }
tower-http = { version = "0.3.4", features = [ "add-extension", "trace", "timeout", "compression-full", "decompression-full", "request-id" ] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.4"
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
trim-margin = "0.1.0"
url = { version = "2.3.1", features = ["serde"] }
validator = { version = "0.16.0", features = ["derive"] }


[dev-dependencies]
fake = { version = "2.5.0", features = ["chrono"] }
pretty_assertions = "1.3.0"
serde_test = "1.0.147"
temp-env = "0.3.1"
tokio-test = "0.4.2"
wiremock = "0.5.15"
